@@ -109,7 +109,7 @@ class parseini:
         config._cfg = self._cfg
         self.config = config
         ctxname = getcontextname()
-        if ctxname == "hudson":
+        if ctxname == "jenkins":
             reader = IniReader(self._cfg, fallbacksections=['tox'])
             toxsection = "tox:%s" % ctxname
             distshare_default = "{toxworkdir}/distshare"
@@ -375,5 +375,5 @@ class IniReader:
 
 def getcontextname():
     if 'HUDSON_URL' in os.environ:
-        return 'hudson'
+        return 'jenkins'
     return None
